Fix a bug what cannot get the nic combo version

--- a/SystemAutomationUpdate/.local/ProjectSettings.json
+++ b/SystemAutomationUpdate/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"ProjectWatches":"{\"Value\":[]}","ProjectBreakpoints":"{\"Value\":{\"Framework/SetRAIDFirmwareVersion.xaml\":[]}}","OpenedDocuments":"[\"Main.xaml\"]"}
+{"ProjectWatches":"{\"Value\":[]}","ProjectBreakpoints":"{\"Value\":{}}","OpenedDocuments":"[\"Framework/SetTransactionStatus.xaml\",\"Framework/GetFirmwareVersion.xaml\",\"Framework/GetTransactionData.xaml\",\"Main.xaml\"]"}
