Changed the process from sequence to flowchart in getting a combo version

--- a/SystemAutomationUpdate/.local/ProjectSettings.json
+++ b/SystemAutomationUpdate/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"ProjectWatches":"{\"Value\":[]}","ProjectBreakpoints":"{\"Value\":{}}","OpenedDocuments":"[\"Framework/SetTransactionStatus.xaml\",\"Framework/GetFirmwareVersion.xaml\",\"Framework/GetTransactionData.xaml\",\"Main.xaml\"]"}
+{"ProjectWatches":"{\"Value\":[]}","ProjectBreakpoints":"{\"Value\":{}}","OpenedDocuments":"[\"test.xaml\",\"Main.xaml\",\"Framework/SetRAIDFirmwareVersion.xaml\",\"Framework/SetNICFirmwareVersion.xaml\"]"}
